Completed billing and receipt generation